--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/adapter-neon": "^6.11.1",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
