--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "pinata": "^2.4.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
