--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-player": "^3.2.0",
+    "sonner": "^2.0.6",
     "zod": "^4.0.5"
   },
   "devDependencies": {
