--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "react-player": "^3.2.0",
+    "react-window": "^1.8.11",
     "sonner": "^2.0.6",
     "zod": "^4.0.5"
   },
@@ -41,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
