Add Pinata API keys and update README for environment setup

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ AUTH_GOOGLE_SECRET=
 
 AUTH_DISCORD_ID=
 AUTH_DISCORD_SECRET=
+
+PINATA_API_KEY=
+PINATA_API_SECRET=
+PINATA_JWT=
+NEXT_PUBLIC_GATEWAY_URL=
