--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
-    "@hookform/resolvers": "^5.1.1",
-    "@prisma/adapter-neon": "^6.11.1",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
-    "framer-motion": "^12.23.3",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^5.0.0-beta.29",
@@ -33,8 +28,7 @@
     "react-hook-form": "^7.60.0",
     "react-player": "^3.2.0",
     "react-window": "^1.8.11",
-    "sonner": "^2.0.6",
-    "zod": "^4.0.5"
+    "sonner": "^2.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
